<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UMM-App</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="about_us">About Us</string>
    <string name="title">Multiply Madness</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="challenge_title">Challenge Mode!</string>
    <string name="practice_title">Practice Mode</string>
    <string name="challenge_description">Please select a difficulty</string>
    <string name="leaderboard_title">Leaderboards!</string>
    <string name="leaderboard_description">Select your desired leaderboard</string>
    <string name="leaderboard_page_title">nth Grade Leaderboard!</string>
    <string name="leaders_placeholder">1. You (others WOULD be here)</string>
    <string name="top_button">Top</string>
    <string name="you_button">Your Rank</string>
    <string name="grade1">1st Grade</string>
    <string name="grade2">2nd Grade</string>
    <string name="grade3">3rd Grade</string>
    <string name="grade4">4th Grade</string>
    <string name="grade5">5th Grade</string>
    <string name="grade6">6th Grade</string>
    <string name="grade7">7th Grade</string>
    <string name="grade8">8th Grade</string>
    <string name="main_menu">Main Menu</string>
    <string name="easy_practice">Tables 1-6</string>
    <string name="medium_practice">Tables 7-12</string>
    <string name="hard_practice">Tables 13-17</string>
    <string name="start_practice">Begin</string>
    <string name="title_activity_leaderboard_menu">LeaderboardMenu</string>
    <string name="title_activity_leaderboard_page">LeaderboardPage</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="sound">Sound</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_new_pass">Reenter New Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_sound">sound</string>
    <string name="title_activity_create_account">createAccount</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="ReenterPass">Reenter Password</string>
    <string name="about_description">Multiply Madness v1.0.
        Created by the French Toast Mafia. copyright 2014.
    This application is free to all. If you paid for it, you were cheated.</string>

</resources>
