<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <ImageView
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/multiply_madness_title"
            android:layout_weight="0.30"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="215dp"
            android:layout_height="30dp"
            android:text="@string/challenge_title"
            android:id="@+id/challenge_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.075"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="215dp"
            android:layout_height="30dp"
            android:text="@string/practice_title"
            android:id="@+id/practice_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.075"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="215dp"
            android:layout_height="30dp"
            android:text="@string/action_settings"
            android:id="@+id/settings_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.075"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="215dp"
            android:layout_height="30dp"
            android:text="@string/logout"
            android:id="@+id/logout_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.075" />
    </LinearLayout>
</RelativeLayout>
