<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/random_grey_variations">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.075"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:textSize="36dp"
            android:textStyle="bold|italic" />

        <Button
            android:layout_width="215dp"
            android:layout_height="40dp"
            android:text="@string/change_password"
            android:id="@+id/button"
            android:layout_weight="0.075"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="215dp"
            android:layout_height="40dp"
            android:text="@string/sound"
            android:id="@+id/button2"
            android:layout_weight="0.075"
            android:layout_above="@+id/button3"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>









</RelativeLayout>