<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Multiply Madness"
        android:id="@+id/textView"
        android:textSize="36dp"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="147dp">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:id="@id/create_acc_button"
            android:textSize="24dp"
            android:onClick="createAccount"/>
    </LinearLayout>



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@id/createUsernameField"
        android:password="false"
        android:layout_alignTop="@id/username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:id="@id/username"
        android:textColor="#ffffff"
        android:textSize="24dp"
        android:textIsSelectable="false"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView3"
        android:textColor="#ffffff"
        android:textSize="24dp"
        android:layout_alignTop="@id/createAccountPassField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/createAccountPassField"
        android:ems="10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_below="@id/createUsernameField"
        android:layout_alignParentStart="false"
        android:layout_marginTop="15dp"
        android:textIsSelectable="false"
        android:password="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@id/createAccountPassField2"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:password="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ReenterPass"
        android:id="@+id/textView4"
        android:textColor="#ffffff"
        android:textSize="24dp"
        android:textIsSelectable="false"
        android:singleLine="false"
        android:phoneNumber="false"
        android:layout_alignBottom="@id/createAccountPassField2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/createAccountPassField2" />
</RelativeLayout>